Split code_dom into multiple files for tidiness and refactored the modules a bit
Improved the header template system somewhat and added a header to all files (#18, #22)
Made it possible to configure types/names of "trivial" arguments that will not get default helpers generated (#24)
Changed order of Ex functions relative to the original (#23)

--- v0.03

Added alignment for comment indentation
Added command line arguments
Renamed templates to make them easier to match with source files
Added struct forward declarations to metadata
Added ImVector_Construct() and ImVector_Destruct() helpers
Added typedefs to the metadata output
Added parsed versions of complex types to the metadata output
Added marking of internal API elements
Fixed line comments on preprocessor directives getting treated as part of the directive
Added better #define parsing
Added defines to metadata output
Tidied up directory structure a bit
Fixed metadata conditionals not getting generated correctly for else blocks
Fixed spelling of "preceding" in metadata
Removed help reference to processing imgui_internal.h for now in case it confuses people

--- v0.02

Removed some more ImVector functions that don't compile correctly due to the lack of operator== on certain types
Removed ImNewWrapper on newer ImGui versions
Made LogTextV() only get added on ImGui version that don't supply it themselves
Renamed IMGUI_API to CIMGUI_API
Added (void) to declarations of C functions with no arguments
Fixed field declarations not identifying the IMGUI_API prefix
Made self parameters on const functions be const
Got rid of excessive use of struct qualifier and added autogenerated forward declarations to compensate
Removed unnecessary header files and made the stdbool.h include get added in a more sensible place
Changed ImVec2/ImVec4 to be treated as by-value types and avoid new() in their constructors