@@ -21,6 +21,9 @@ Split code_dom into multiple files for tidiness and refactored the modules a bit
 Improved the header template system somewhat and added a header to all files (#18, #22)
 Made it possible to configure types/names of "trivial" arguments that will not get default helpers generated (#24)
 Changed order of Ex functions relative to the original (#23)
+Added support for forcing disambiguation to disambiguate all variants of a function (#11)
+Added support to tell disambiguation to prioritise certain argument types (#11)
+Added function renaming and used it to tidy up ImGui_GetColorU32 and ImGui_IsRectVisible (#11, #25)
 
 --- v0.03
 
